# pyCampfireValley

./: .gitignore  CHANGELOG.md  DEMO_GUIDE.md  DEPLOYMENT.md  DOCKER_README.md  Dockerfile  PYPI_PUBLISHING.md  README.md  TESTING.md  TROUBLESHOOTING.md  _config.yml  build_docker.py  campfire_valley_demo_report.html  campfire_valley_demo_report.json  debug_db.py  demo_campfire_valley.py  demo_marketing_team.py  development_team_server.py  distributed_demo_orchestrator.py  docker-compose.yml  index.md  local_demo_orchestrator.py  manifest.yaml  marketing_team_report.html  package-lock.json  package.json  pyproject.toml  requirements.txt  setup.py  simple_marketing_demo.py  simple_marketing_test.py  valley_with_web_server.py
.github/workflows/: pages.yml
.kiro/specs/campfire-valley-library/: design.md  requirements.md  tasks.md
campfirevalley/: __init__.py  adapters.py  campfire.py  cli.py  config.py  config_manager.py  daemon.py  dock.py  interfaces.py  justice.py  justice_v2.py  key_manager.py  llm_campfire.py  llm_defaults.py  llm_service.py  mcp.py  models.py  monitoring.py  party_box.py  routing.py  routing_v2.py  service_catalog.py  stt.py  vali.py  valley.py  voice.py  zeitgeist_plugins.py  zeitgeist_runtime.py
campfirevalley/campfires/: sanitizer.py
campfirevalley/web/: api.py  models.py  server.py  visualization.py
campfirevalley/web/static/: index.html
campfirevalley/web/static/css/: style.css
campfirevalley/web/static/js/: campfire-nodes.js  litegraph-integration.js  litegraph.js  main.js  metrics.js  visualization.js
config/: default.yaml  development.yaml  production.yaml
config/campfires/: backend-developer-ollama.yaml  backend-developer.yaml  creative-director.yaml  devops-specialist.yaml  frontend-developer.yaml  junior-auditor.yaml  marketing-strategist.yaml  mcp-service.yaml  problem-decomposer-ollama.yaml  problem-decomposer.yaml  senior-auditor.yaml  testing-specialist.yaml  ux-researcher.yaml
docs/: ui-header-layout.md  web-ui.md
examples/: README_FEDERATION.md  advanced_config.yaml  campfire-config.yaml  dock_campfires_demo.py  docker-compose.federation.yml  federation_demo.py  legal_team_demo.py  manifest.yaml  phase2_example.py  start_federation.py
examples/config/federation/: businessvalley.yaml  creativevalley.yaml  techvalley.yaml
monitoring/: prometheus.yml
tests/: test_camper_creation_flow.py  test_cli.py  test_config_validation_minimal.py  test_legal_e2e.py  test_llm_defaults.py  test_mcp_llm_service.py  test_monitoring.py  test_valley_routing.py  test_watch_mode.py  test_zeitgeist_plugins.py
tools/: acorn-parse.js  bisect-parse.js  brace-depth.js  check-block.js  check-campfire-nodes-function.js  check-campfire-nodes.js  check-static-js.js
tray-agent/: package-lock.json  package.json  tsconfig.json
tray-agent/src/: config.ts  main.ts  preload.ts  recorder.html  recorder_preload.cjs  renderer.ts  settings.html  settings_preload.cjs  settings_preload.ts
